# trackteroid

./: .gitignore  .readthedocs.yaml  AUTHORS.md  LICENSE  README.md  pyproject.toml  requirements.txt  tox.ini
.github/ISSUE_TEMPLATE/: issue--bug-report.md  issue--feature-request.md
.github/workflows/: tox.yml
doc/: requirements.txt
doc/sphinx_source/: collections.md  conf.py  configuration.md  entity.md  index.md  installation.md  query.md  quickstart.md  session.md
doc/sphinx_source/collections/: emptycollection.md  entitycollection.md  examples.md  overview.md
doc/sphinx_source/query/: examples.md  overview.md
doc/sphinx_source/session/: examples.md
src/trackteroid/: __init__.py  configuration.py  constants.py  session.py
src/trackteroid/entities/: __init__.py  base.py  base.pyi  declarations.py  declarations.pyi  entities.py  entities.pyi  relationships_parser.py  schematypes.py
src/trackteroid/query/: __init__.py  criteria.py  criteria.pyi  query.py  query.pyi  utils.py
src/trackteroid/stubs/: __init__.py  stubs.py
src/trackteroid/test/: test.py
tests/: conftest.py  test_authoring.py  test_collection.py  test_entity.py  test_session.py
tests/resources/session/: operations_linux.dbm  operations_windows.dbm.dir
